# tradetropy

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: docs.yml  tests.yml
assets/demos/sma_cross/: chart.html  snippet.py
benchmarks/: bench_heavy_multi_indicator.py  bench_run_loop.py  bench_vs_backtesting_py.py
changelog/: index.html
contributing/: index.html
design/deep_trades_dom/: index.html
docs/: changelog.md  contributing.md  examples.md  index.md
docs/design/: deep_trades_dom.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: backtesting.md  concepts.md  data.md  indicators.md  live.md  order-flow.md  performance.md  plotting.md  replay.md  robustness.md
docs/reference/: data-types.md  datasets.md  engines.md  index.md  indicators.md  io.md  strategy.md
examples/: index.html  large_trades.py  multi_symbol.py  multi_timeframe.py  sma_cross.py  volume_profile.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/backtesting/: index.html
guide/concepts/: index.html
guide/data/: index.html
guide/indicators/: index.html
guide/live/: index.html
guide/order-flow/: index.html
guide/performance/: index.html
guide/plotting/: index.html
guide/replay/: index.html
guide/robustness/: index.html
reference/: index.html
reference/data-types/: index.html
reference/datasets/: index.html
reference/engines/: index.html
reference/indicators/: index.html
reference/io/: index.html
reference/strategy/: index.html
search/: search_index.json
src/tradetropy/: __init__.py  exceptions.py  logger.py  signal.py
src/tradetropy/backtest/: __init__.py  _build.py  _runner.py  _shm_bundle.py  _validation.py  engine.py  pool.py  pool_adapter.py
src/tradetropy/connectors/: __init__.py  _disclaimer.py  binance.py  bybit.py  ccxt.py  mt5.py
src/tradetropy/core/: __init__.py  broker.py  constants.py  data_types.py
src/tradetropy/data/: __init__.py  _book_replay.py  _klines.py  _proxy.py  _ring.py  _store.py  _views.py  data.py
src/tradetropy/datasets/: __init__.py
src/tradetropy/io/: __init__.py  _backends.py  _book.py  _common.py  _compat.py  _klines.py  _mbo.py  _record.py  _ticks.py  io.py
src/tradetropy/live/: __init__.py  _builder.py  _feed.py  _loop.py  _warmup.py  engine.py
src/tradetropy/models/: __init__.py  _warmup_policy.py  decorators.py  strategy.py
src/tradetropy/optimize/: __init__.py  grid_search.py  optimizer.py  random_search.py  reporter.py  result.py  space.py  task.py
src/tradetropy/playback/: __init__.py  base.py
src/tradetropy/plotting/: __init__.py  _fig_factory.py  _layout.py  _util.py  chart.py  config.py  plotting.py  sources.py
src/tradetropy/session/: __init__.py  base.py  fake_live_sesh.py
src/tradetropy/stats/: __init__.py  _fast.py  stats.py
src/tradetropy/streaming/: __init__.py  base.py  (+4 more)
(+75 files in other folders)
